# TensorNN

./: .gitignore  README.md  publish.py  pypi.yml  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: custom-class-template.rst  custom-module-template.rst
examples/: sine_vis.py
scripts/: publish.py  setup.py
tensornn/: __init__.py  activation.py  debug.py  errors.py  layers.py  loss.py  nn.py  optimizers.py  tensor.py  utils.py
tensornn/create/: README.md  __init__.py  utils.py
tensornn/learning/: README.md  __init__.py
tests/: mytest.py  test_and.py  test_linear_regression.py  test_sine.py  test_ttt.py  test_xor.py  test_xor_class.py  test_xor_reg.py
