[project]
name = "tensornn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
